--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Blocipedia</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+    <head>
+        <title>Blocipedia</title>
+        <%= csrf_meta_tags %>
+        <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+        <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    </head>
 
-  <body>
-    <%= yield %>
-  </body>
+    <body>
+        <div class="container">
+            <ul class="nav nav-tabs">
+                <% if user_signed_in? %>
+                    <li class="pull-right"><%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
+                    <li class="pull-right"><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %></li>
+                    <li class="pull-right"><%= link_to current_user.email, root_path, :class => 'navbar-link' %></li>
+                <% else %>
+                    <li class="pull-right"><%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %></li>
+                    <li class="pull-right"><%= link_to "Sign In", new_user_session_path, :class => 'navbar-link' %></li>
+                <% end %>
+            </ul>
+            <%= yield %>
+        </div>
+    </body>
 </html>
