--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,14 +14,31 @@
         <div class="container">
             <ul class="nav nav-tabs">
                 <% if user_signed_in? %>
+                    <li class="pull-left"><%= link_to "Home", root_path, :class => 'navbar-link' %></li>
+                    <li class="pull-left"><%= link_to "Wikis", wikis_path, :class => 'navbar-link' %></li>
                     <li class="pull-right"><%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
                     <li class="pull-right"><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %></li>
                     <li class="pull-right"><%= link_to current_user.email, root_path, :class => 'navbar-link' %></li>
                 <% else %>
+                    <li class="pull-left"><%= link_to "Home", root_path, :class => 'navbar-link' %></li>
+                    <li class="pull-left"><%= link_to "Wikis", wikis_path, :class => 'navbar-link' %></li>
                     <li class="pull-right"><%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %></li>
                     <li class="pull-right"><%= link_to "Sign In", new_user_session_path, :class => 'navbar-link' %></li>
                 <% end %>
             </ul>
+
+            <% if flash[:notice] %>
+                <div class="alert alert-success">
+                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                    <%= flash[:notice] %>
+                </div>
+            <% elsif flash[:alert] %>
+                <div class="alert alert-warning">
+                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                    <%= flash[:alert] %>
+                </div>
+            <% end %>
+
             <%= yield %>
         </div>
     </body>
