--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,12 +3,16 @@
 </div>
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-4">
+        <h2>Sign Up to Gain Access</h2>
+        <p>Signing up allows you to access and create Wikis! Feel free to peruse our Wiki titles in the meantime.</p>
+    </div>
+    <div class="col-md-4">
         <h2>Learn Anything and Everything</h2>
         <p>Blocipedia is your resource to learn anything your heart could imagine.</p>
     </div>
-    <div class="col-md-6">
-        <h2>Teach Everyone</h2>
+    <div class="col-md-4">
+        <h2>Teach Everyone</h2><br>
         <p>Blocipedia allows you to share your knowledge with the world.</p>
     </div>
 </div>
