--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -12,7 +12,9 @@
             </div>
         <% end %>
     </div>
-    <div class="col-md-4">
-        <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
-    </div>
+    <% if user_signed_in? %>
+        <div class="col-md-4">
+            <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
+        </div>
+    <% end %>
 </div>
