--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,11 +1,17 @@
 <h1><%= @wiki.title %></h1>
 
-<div class="row">
-    <div class="col-md-8">
-        <p><%= @wiki.body %></p>
+<% if user_signed_in? %>
+    <div class="row">
+        <div class="col-md-8">
+            <p><%= @wiki.body %></p>
+        </div>
+        <div class="col-md-4">
+            <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
+            <% if policy(@wiki).destroy? %>
+                <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this Wiki?'} %>
+            <% end %>
+        </div>
     </div>
-    <div class="col-md-4">
-        <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
-        <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this Wiki?'} %>
-    </div>
-</div>
+<% else %>
+    <% flash.now[:alert] = "Please sign in to read this Wiki. Thank you!" %>
+<% end %>
