added more pundit functionality

--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -12,7 +12,7 @@
             </div>
         <% end %>
     </div>
-    <% if policy(@wiki).create? %>
+    <% if policy(@wikis).create? %>
         <div class="col-md-4">
             <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
         </div>
