--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @wiki.title %></h1>
 
-<% if user_signed_in? %>
+<% if policy(@wiki).show? %>
     <div class="row">
         <div class="col-md-8">
             <p><%= @wiki.body %></p>
