--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -37,7 +37,7 @@
 <% end %>
 
 <h3>Upgrade to Premium</h3>
-
+ <%= render partial: 'charges/new', locals: { user: @user } %>
 
 <h3>Cancel my account</h3>
 
