--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,11 @@
                     <li class="pull-left"><%= link_to "Home", root_path, :class => 'navbar-link' %></li>
                     <li class="pull-left"><%= link_to "Wikis", wikis_path, :class => 'navbar-link' %></li>
                     <li class="pull-right"><%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
+                    <% if current_user.standard? %>
+                        <li class="pull-right"><%= link_to "Upgrade to Premium", new_charge_path, :class => 'navbar-link' %></li>
+                    <% else %>
+                        <li class="pull-right"><%= link_to "Downgrade Account", edit_charge_path(current_user), :class => 'navbar-link' %></li>
+                    <% end %>
                     <li class="pull-right"><%= link_to current_user.email, edit_user_registration_path, :class => 'navbar-link' %></li>
                 <% else %>
                     <li class="pull-left"><%= link_to "Home", root_path, :class => 'navbar-link' %></li>
