--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -3,13 +3,16 @@
 <div class="row">
     <div class="col-md-8">
         <% @wikis.each do |wiki| %>
-            <div class="media">
-                <div class="media-body">
-                    <h4 class="media-heading">
-                        <%= link_to wiki.title, wiki %>
-                    </h4>
+            <% if wiki.private? && (current_user.nil? || current_user.standard?) %>
+            <% else %>
+                <div class="media">
+                    <div class="media-body">
+                        <h4 class="media-heading">
+                            <%= link_to wiki.title, wiki %>
+                        </h4>
+                    </div>
                 </div>
-            </div>
+            <% end %>
         <% end %>
     </div>
     <% if policy(@wikis).create? %>
