downgrade moved to user controller and callbacks added

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,5 +3,5 @@
 
 
 <div class="form-group">
-    <%= link_to "Downgrade", charges_update_path, method: :post, class: 'btn btn-danger', data: {confirm: 'By downgrading, all private Wikis that you have created will become public. Are you sure you want to downgrade?'} %>
+    <%= link_to "Downgrade", users_update_path, method: :post, class: 'btn btn-danger', data: {confirm: 'By downgrading, all private Wikis that you have created will become public. Are you sure you want to downgrade?'} %>
 </div>
