--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
                     <% if current_user.standard? %>
                         <li class="pull-right"><%= link_to "Upgrade to Premium", new_charge_path, :class => 'navbar-link' %></li>
                     <% else %>
-                        <li class="pull-right"><%= link_to "Downgrade Account", edit_charge_path(current_user), :class => 'navbar-link' %></li>
+                        <li class="pull-right"><%= link_to "Downgrade Account", edit_user_path(current_user), :class => 'navbar-link' %></li>
                     <% end %>
                     <li class="pull-right"><%= link_to current_user.email, edit_user_registration_path, :class => 'navbar-link' %></li>
                 <% else %>
