--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -17,10 +17,10 @@
                 <%= f.label :body %>
                 <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter Wiki body" %>
             </div>
-            <% if current_user.premium? || current_user.admin? %>
+            <% if @wiki.user == current_user && (current_user.premium? || current_user.admin?) %>
                 <div class="form-group">
-                    <%= f.label :private, class: 'checkbox' do %>
-                        <%= f.check_box :private %> Make Wiki Private
+                    <%= f.label :private do %>
+                        Make Wiki Private <%= f.check_box :private %>
                     <% end %>
                 </div>
             <% end %>
