--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -3,8 +3,7 @@
 <div class="row">
     <div class="col-md-8">
         <% @wikis.each do |wiki| %>
-            <% if wiki.private? && (current_user.nil? || current_user.standard?) %>
-            <% else %>
+            <% if policy(Wiki).index? %>
                 <div class="media">
                     <div class="media-body">
                         <h4 class="media-heading">
@@ -15,7 +14,7 @@
             <% end %>
         <% end %>
     </div>
-    <% if policy(@wikis).create? %>
+    <% if policy(Wiki).create? %>
         <div class="col-md-4">
             <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
         </div>
