--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -11,6 +11,21 @@
                 <%= link_to "Delete Wiki", @wiki, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this Wiki?'} %>
             <% end %>
         </div>
+        <div class="col-md-4">
+            <% if @wiki.user == current_user && (current_user.premium? || current_user.admin?) %>
+                <%= form_for [@wiki, Collaborator.new] do |f| %>
+                    <strong>Add Collaborators?</strong> <%= select_tag('collab_user', options_from_collection_for_select(User.all.where.not(id: current_user.id).where.not(id: @wiki.collaborators.collect(&:user_id)), 'id', 'email'), include_blank: true) %>
+                    <%= f.submit "Add Collaborator", class: 'btn btn-primary' %>
+                <% end %>
+            <% end %>
+            <% if @wiki.private? && current_user = @wiki.user && @wiki.collaborators.size > 0 %>
+                <strong>Current Collaborators:</strong> <br>
+                <% @wiki.collaborators.each do |collab| %>
+                    <%= link_to "X", wiki_collaborator_path(@wiki.id, collab.id), method: :delete, class: "btn btn-danger" %>
+                    <%= collab.user.email %> <br>
+                <% end %>
+            <% end %>
+        </div>
     </div>
 <% else %>
     <% flash.now[:alert] = "Please sign in to read this Wiki. Thank you!" %>
