fully configured wiki_policy

--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -12,13 +12,13 @@
             <% end %>
         </div>
         <div class="col-md-4">
-            <% if @wiki.user == current_user && (current_user.premium? || current_user.admin?) %>
+            <% if @wiki.user == current_user && @wiki.private? && (current_user.premium? || current_user.admin?) %>
                 <%= form_for [@wiki, Collaborator.new] do |f| %>
                     <strong>Add Collaborators?</strong> <%= select_tag('collab_user', options_from_collection_for_select(User.all.where.not(id: current_user.id).where.not(id: @wiki.collaborators.collect(&:user_id)), 'id', 'email'), include_blank: true) %>
                     <%= f.submit "Add Collaborator", class: 'btn btn-primary' %>
                 <% end %>
             <% end %>
-            <% if @wiki.private? && current_user = @wiki.user && @wiki.collaborators.size > 0 %>
+            <% if @wiki.private? && current_user.premium? && @wiki.collaborators.size > 0 %>
                 <strong>Current Collaborators:</strong> <br>
                 <% @wiki.collaborators.each do |collab| %>
                     <%= link_to "X", wiki_collaborator_path(@wiki.id, collab.id), method: :delete, class: "btn btn-danger" %>
