update readme and add images

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-    <h1>Blocipedia</h1>
+    <h1>Webipedia</h1>
 </div>
 
 <div class="row">
@@ -9,10 +9,10 @@
     </div>
     <div class="col-md-4">
         <h2>Learn Anything and Everything</h2>
-        <p>Blocipedia is your resource to learn anything your heart could imagine.</p>
+        <p>Webipedia is your resource to learn anything your heart could imagine.</p>
     </div>
     <div class="col-md-4">
         <h2>Teach Everyone</h2><br>
-        <p>Blocipedia allows you to share your knowledge with the world.</p>
+        <p>Webipedia allows you to share your knowledge with the world.</p>
     </div>
 </div>
